--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 *{
   padding: 0;
-  margin: 0px;
-    font-style:inherit;
+  margin: 0;
     /*background-color: rgb(251, 204, 111);*/
     list-style-type: none;
     text-decoration: none;
@@ -16,12 +15,14 @@ body{
 
 
 .myNav{
-width: 100%;
+width: 101%;
   background-color: rgb(186, 68, 255);
     height: 100px;
 margin-bottom: 50px;
    
 }
+
+
 
 #btnGenerator{
     background-color:rgb(0, 165, 66) ;
@@ -76,13 +77,7 @@ p{
     line-height: 25px;
 }
 
-@media screen and (max-width:971px){
- ul li a{
-    font-size: 17px;
-    
-     
-   
- }
+
 
 
 #btnGenerator{
@@ -97,7 +92,6 @@ p{
     width: 90px;
 }
 
-}
 
 
 
@@ -176,7 +170,7 @@ input{
     font-size: 30px;
     float: right;
     line-height: 70px;
-    margin-right: 30px;
+    margin-right: 80px;
     cursor: pointer;
     display: none;
 }
@@ -229,8 +223,13 @@ input{
      #check:checked ~ ul{
         left: 0;
      }
+    
 
 }
+
+
+
+
 @media (max-width:360px){
 .label{
     font-size: 20px;
@@ -240,4 +239,137 @@ input{
    align-items: center;
    margin-left: 40%;
 }
+
+}
+@media (max-width:450px ){
+    .myNav{
+        width: 105%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:420px ){
+    .myNav{
+        width: 107%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+
+@media (max-width:415px ){
+    .myNav{
+        width: 110%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+
+@media (max-width:402px ){
+    .myNav{
+        width: 120%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+
+@media (max-width:377px ){
+    .myNav{
+        width: 130%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+
+@media (max-width:325px ){
+    .myNav{
+        width: 140%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:302px ){
+    .myNav{
+        width: 150%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:275px ){
+    .myNav{
+        width: 163%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+
+
+@media (max-width:265px ){
+    .myNav{
+        width: 180%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:235px ){
+    .myNav{
+        width: 196%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:220px ){
+    .myNav{
+        width: 219%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:195px ){
+    .myNav{
+        width: 229%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:185px ){
+    .myNav{
+        width: 247%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:175px ){
+    .myNav{
+        width: 260%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:165px ){
+    .myNav{
+        width: 285%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:155px ){
+    .myNav{
+        width: 300%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:146px ){
+    .myNav{
+        width: 330%;
+          background-color: rgb(186, 68, 255);
+     
+        }
+}
+@media (max-width:133px ){
+    .myNav{
+        width: 360%;
+          background-color: rgb(186, 68, 255);
+     
+        }
 }
